--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#82269e">
     <link rel="stylesheet" href="css/style.css">
     <title>Nubank</title>
 </head>
